--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         [Dominux]
     </a>
 
+    <a href="#signup">
+        Sign up
+    </a>
+
+    <a href="#login">
+        Login
+    </a>
+
     <a class="active" href="#Purchasing">
         Purchase
     </a>
@@ -20,7 +28,7 @@
     </a>
 
     <a href="#Forums">
-        Market Forums
+        Information
     </a>
 
     <a href="https://discord.com/" target="_blank">
@@ -69,52 +77,50 @@
 
 <!---->
 
-<div class="centered">
-    <button>
-        Purchase
-    </button>
+<div class="centered" ; style="font-size: 15px">
+    <p style="color:white">
+        Navex available : 523234
+    </p>
+
+    <div>
+        <button>
+            Purchase
+        </button>
+    </div>
+
+    <br />
+
+    <div>
+        <input type="text" />
+    </div>
+
+    <hr />
 </div>
-
-<br />
-
-<div class="centered">
-    <input type="text" />
-</div>
-
-<hr />
 
 <!---->
 
 <div class="centered" ; style="font-size: 15px">
     <p style="color:green">
-        Cheapest rate : $2.5/1
+        Current rates [USD]
     </p>
 
-    <p style="color:white">
-        4356 Navex available.
+    <p style="color:green">
+        4.5/1k
     </p>
 
     <p style="color:orange">
-        Average rate : $3.5/1
-    </p>
-
-    <p style="color:white">
-        53278 Navex available.
+        5/30k
     </p>
 
     <p style="color:red">
-        Highest rate : $4.5/1
-    </p>
-
-    <p style="color:white">
-        74245 Navex available.
+        5.5/1k
     </p>
 </div>
 
 <hr />
 <br />
 
-<div class="centered"; style="position: absolute; bottom: 0px; right: 25%; left: 25%">
+<div class="centered" ; style="position: absolute; bottom: 0px; right: 25%; left: 25%">
     <img src="btc.png" style="width: 30px; height: 30px ">
     <img src="eth.png" style="width: 30px; height: 30px ">
     <img src="ltc.png" style="width: 30px; height: 30px ">
