--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title> Dominux. A Fair trade. </title>
+<title> Dominux. A fair trade. </title>
 
 <body>
     <link rel="stylesheet" href="css.css">
@@ -11,6 +11,14 @@
         [Dominux]
     </a>
 
+    <a href="#signup">
+        Sign up
+    </a>
+
+    <a href="#login">
+        Login
+    </a>
+
     <a class="active" href="#Purchasing">
         Purchase
     </a>
@@ -20,7 +28,7 @@
     </a>
 
     <a href="#Forums">
-        Market Forums
+        Information
     </a>
 
     <a href="https://discord.com/" target="_blank">
@@ -30,38 +38,17 @@
 
 <!---->
 
-<style>
-    .glow {
-        font-size: 80px;
-        color: #fff;
-        text-align: center;
-        animation: glowanim 1s ease-in-out infinite alternate;
-    }
+<h1 class="glow">
+    Dominux
 
-    @-webkit-keyframes glowanim {
-        from {
-            text-shadow: 0 0 10px #571f1f, 0 0 20px #fff, 0 0 30px #32a852, 0 0 40px #32a852, 0 0 50px #32a852, 0 0 60px #32a852, 0 0 70px #32a852;
-        }
-
-        to {
-            text-shadow: 0 0 20px #fff, 0 0 30px #32a852, 0 0 40px #32a852, 0 0 50px #32a852, 0 0 60px #32a852, 0 0 70px #32a852, 0 0 80px #32a852;
-        }
-    }
-</style>
-
-<!-- CSS Glow -->
-
-<h1 class="glow">Dominux</h1>
-
-<h1 class="glow" ; style="font-size: 30px">
-    <u>
+    <u style="font-size: 25px">
         Free from rules, we present
     </u>
 
     <br />
 
-    <u>
-        A safe haven for traders like you.
+    <u style="font-size: 25px">
+        A haven for traders like you.
     </u>
 </h1>
 
@@ -69,55 +56,54 @@
 
 <!---->
 
-<div class="centered">
-    <button>
-        Purchase
-    </button>
-</div>
+<div style="font-size: 15px ; text-align: center">
+    <p style="color:white">
+        Navex available : 1495832
+    </p>
 
-<br />
+    <div>
+        <button>
+            Purchase
+        </button>
+    </div>
 
-<div class="centered">
-    <input type="text" />
+    <br />
+
+    <div>
+        <input type="text" />
+    </div>
 </div>
 
 <hr />
 
 <!---->
 
-<div class="centered" ; style="font-size: 15px">
+<div style="font-size: 15px ; text-align: center">
     <p style="color:green">
-        Cheapest rate : $2.5/1
+        Current rates [USD]
     </p>
 
-    <p style="color:white">
-        4356 Navex available.
+    <p style="color:green">
+        4.5/100k
     </p>
 
     <p style="color:orange">
-        Average rate : $3.5/1
-    </p>
-
-    <p style="color:white">
-        53278 Navex available.
+        5/30k
     </p>
 
     <p style="color:red">
-        Highest rate : $4.5/1
-    </p>
-
-    <p style="color:white">
-        74245 Navex available.
+        5.5/1k
     </p>
 </div>
 
 <hr />
 <br />
 
-<div class="centered"; style="position: absolute; bottom: 0px; right: 25%; left: 25%">
+<!---->
+
+<div class="footer">
     <img src="btc.png" style="width: 30px; height: 30px ">
     <img src="eth.png" style="width: 30px; height: 30px ">
     <img src="ltc.png" style="width: 30px; height: 30px ">
-    <img src="usdt.png" style="width: 30px; height: 30px ">
     <img src="pp.png" style="width: 30px; height: 30px ">
 </div>
