--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title> Dominux. A Fair trade. </title>
+<title> Dominux. A fair trade. </title>
 
 <body>
     <link rel="stylesheet" href="css.css">
@@ -38,38 +38,17 @@
 
 <!---->
 
-<style>
-    .glow {
-        font-size: 80px;
-        color: #fff;
-        text-align: center;
-        animation: glowanim 1s ease-in-out infinite alternate;
-    }
+<h1 class="glow">
+    Dominux
 
-    @-webkit-keyframes glowanim {
-        from {
-            text-shadow: 0 0 10px #571f1f, 0 0 20px #fff, 0 0 30px #32a852, 0 0 40px #32a852, 0 0 50px #32a852, 0 0 60px #32a852, 0 0 70px #32a852;
-        }
-
-        to {
-            text-shadow: 0 0 20px #fff, 0 0 30px #32a852, 0 0 40px #32a852, 0 0 50px #32a852, 0 0 60px #32a852, 0 0 70px #32a852, 0 0 80px #32a852;
-        }
-    }
-</style>
-
-<!-- CSS Glow -->
-
-<h1 class="glow">Dominux</h1>
-
-<h1 class="glow" ; style="font-size: 30px">
-    <u>
+    <u style="font-size: 25px">
         Free from rules, we present
     </u>
 
     <br />
 
-    <u>
-        A safe haven for traders like you.
+    <u style="font-size: 25px">
+        A haven for traders like you.
     </u>
 </h1>
 
@@ -77,9 +56,9 @@
 
 <!---->
 
-<div class="centered" ; style="font-size: 15px">
+<div style="font-size: 15px ; text-align: center">
     <p style="color:white">
-        Navex available : 523234
+        Navex available : 1495832
     </p>
 
     <div>
@@ -93,19 +72,19 @@
     <div>
         <input type="text" />
     </div>
-
-    <hr />
 </div>
+
+<hr />
 
 <!---->
 
-<div class="centered" ; style="font-size: 15px">
+<div style="font-size: 15px ; text-align: center">
     <p style="color:green">
         Current rates [USD]
     </p>
 
     <p style="color:green">
-        4.5/1k
+        4.5/100k
     </p>
 
     <p style="color:orange">
@@ -120,10 +99,11 @@
 <hr />
 <br />
 
-<div class="centered" ; style="position: absolute; bottom: 0px; right: 25%; left: 25%">
+<!---->
+
+<div class="footer">
     <img src="btc.png" style="width: 30px; height: 30px ">
     <img src="eth.png" style="width: 30px; height: 30px ">
     <img src="ltc.png" style="width: 30px; height: 30px ">
-    <img src="usdt.png" style="width: 30px; height: 30px ">
     <img src="pp.png" style="width: 30px; height: 30px ">
 </div>
