--- a/index.html
+++ b/index.html
@@ -52,8 +52,6 @@
     </u>
 </h1>
 
-<hr />
-
 <!---->
 
 <div style="font-size: 15px ; text-align: center">
@@ -62,7 +60,7 @@
     </p>
 
     <div>
-        <button>
+        <button style="border-radius:5px"; onclick="openPurchase()">
             Purchase
         </button>
     </div>
@@ -73,8 +71,6 @@
         <input type="text" />
     </div>
 </div>
-
-<hr />
 
 <!---->
 
@@ -96,7 +92,6 @@
     </p>
 </div>
 
-<hr />
 <br />
 
 <!---->
