--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <div class="topnav">
     <a href="#">
-        [Dominux]
+        [Welcome]
     </a>
 
     <a href="#signup">
@@ -17,14 +17,6 @@
 
     <a href="#login">
         Login
-    </a>
-
-    <a class="active" href="#Purchasing">
-        Purchase
-    </a>
-
-    <a href="#Selling">
-        Sell
     </a>
 
     <a href="#Forums">
@@ -42,13 +34,13 @@
     Dominux
 
     <u style="font-size: 25px">
-        Free from rules, we present
+        Forged in a blaze,
     </u>
 
     <br />
 
     <u style="font-size: 25px">
-        A haven for traders like you.
+        A haven for people like you.
     </u>
 </h1>
 
@@ -56,12 +48,12 @@
 
 <div style="font-size: 15px ; text-align: center">
     <p style="color:white">
-        Navex available : 1495832
+        I always wanted to fly.
     </p>
 
     <div>
         <button style="border-radius:5px"; onclick="openPurchase()">
-            Purchase
+            Join me?
         </button>
     </div>
 
@@ -70,29 +62,9 @@
     <div>
         <input type="text" />
     </div>
+    
+    <br />
 </div>
-
-<!---->
-
-<div style="font-size: 15px ; text-align: center">
-    <p style="color:green">
-        Current rates [USD]
-    </p>
-
-    <p style="color:green">
-        4.5/100k
-    </p>
-
-    <p style="color:orange">
-        5/30k
-    </p>
-
-    <p style="color:red">
-        5.5/1k
-    </p>
-</div>
-
-<br />
 
 <!---->
 
