--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title> Dominux. A fair trade. </title>
+<title> Always planning ahead. </title>
 
 <body>
     <link rel="stylesheet" href="css.css">
