--- a/index.html
+++ b/index.html
@@ -48,20 +48,28 @@
 
 <div style="font-size: 15px ; text-align: center">
     <p style="color:white">
-        I always wanted to fly.
+        The year 1866 was signalised by a remarkable incident, 
+        a mysterious and puzzling phenomenon, 
+        which doubtless no one has yet forgotten. 
+        Not to mention rumours which agitated the maritime population and excited the public mind, 
+        even in the interior of continents, 
+        seafaring men were particularly excited.
+        Merchants, 
+        common sailors, 
+        captains of vessels, 
+        skippers, 
+        both of Europe and America, 
+        naval officers of all countries,
+        and the Governments of several States on the two continents, were deeply interested in the matter.
+        For some time past vessels had been met by "an enormous thing," 
+        a long object, spindle-shaped, 
+        occasionally phosphorescent,
+        and infinitely larger and more rapid in its movements than a whale.
+        The facts relating to this apparition (entered in various log-books) agreed in most respects as to the shape of the object or creature in question,
+        the untiring rapidity of its movements, its surprising power of locomotion, 
+        and the peculiar life with which it seemed endowed.
+        If it was a whale, it surpassed in size all those hitherto classified in science. 
     </p>
-
-    <div>
-        <button style="border-radius:5px"; onclick="openPurchase()">
-            Join me?
-        </button>
-    </div>
-
-    <br />
-
-    <div>
-        <input type="text" />
-    </div>
     
     <br />
 </div>
