--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title> Always planning ahead. </title>
+<title> Exchange with ease. </title>
 
 <body>
     <link rel="stylesheet" href="css.css">
@@ -21,10 +21,6 @@
 
     <a href="#Forums">
         Information
-    </a>
-
-    <a href="https://discord.com/" target="_blank">
-        Discord
     </a>
 </div>
 
