--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 <!---->
 
 <h1 class="glow">
-    [Welcome]
+    [BuyCrypto.com]
 
     <u style="font-size: 25px">
-        Forged in a blaze,
+        Exchange easily,
     </u>
 
     <br />
 
     <u style="font-size: 25px">
-        A haven for people like you.
+        Exchange safely.
     </u>
 </h1>
 
