--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title> Exchange with ease. </title>
+<title> BuyCrypto </title>
 
 <body>
     <link rel="stylesheet" href="css.css">
@@ -8,15 +8,7 @@
 
 <div class="topnav">
     <a href="#">
-        [Welcome]
-    </a>
-
-    <a href="#signup">
-        Sign up
-    </a>
-
-    <a href="#login">
-        Login
+        [BuyCrypto.com]
     </a>
 
     <a href="#Forums">
