--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
 
     <br />
 
-    <u style="font-size: 25px">
-        Exchange safely.
-    </u>
+    <p style="font-size: 25px">
+        Exchange
+
+        <u style="font-size: 25px">
+            safely.
+        </u>
+    </p>
 </h1>
 
 <!---->
