--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
 <h1 class="glow">
     [BuyCrypto.com]
 
-    <u style="font-size: 25px">
-        Exchange easily,
-    </u>
+    <p style="font-size: 25px">
+        Exchange
+
+        <u style="font-size: 25px">
+            easily.
+        </u>
+    </p>
 
     <br />
 
