--- a/index.html
+++ b/index.html
@@ -44,27 +44,7 @@
 
 <div style="font-size: 15px ; text-align: center">
     <p style="color:white">
-        The year 1866 was signalised by a remarkable incident, 
-        a mysterious and puzzling phenomenon, 
-        which doubtless no one has yet forgotten. 
-        Not to mention rumours which agitated the maritime population and excited the public mind, 
-        even in the interior of continents, 
-        seafaring men were particularly excited.
-        Merchants, 
-        common sailors, 
-        captains of vessels, 
-        skippers, 
-        both of Europe and America, 
-        naval officers of all countries,
-        and the Governments of several States on the two continents, were deeply interested in the matter.
-        For some time past vessels had been met by "an enormous thing," 
-        a long object, spindle-shaped, 
-        occasionally phosphorescent,
-        and infinitely larger and more rapid in its movements than a whale.
-        The facts relating to this apparition (entered in various log-books) agreed in most respects as to the shape of the object or creature in question,
-        the untiring rapidity of its movements, its surprising power of locomotion, 
-        and the peculiar life with which it seemed endowed.
-        If it was a whale, it surpassed in size all those hitherto classified in science. 
+        BuyCrypto offers a hassle-free and anonymous platform for buying and selling cryptocurrencies without requiring users to sign up. With near-instant transaction times, users can seamlessly trade their digital assets without the need for a lengthy registration process. The platform prioritizes convenience and efficiency, providing a quick and secure way for individuals to engage in cryptocurrency transactions without the typical barriers.
     </p>
     
     <br />
