--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
     <img src="btc.png" style="width: 30px; height: 30px ">
     <img src="eth.png" style="width: 30px; height: 30px ">
     <img src="ltc.png" style="width: 30px; height: 30px ">
+    <img src="tether.png" style="width: 30px; height: 30px ">
     <img src="pp.png" style="width: 30px; height: 30px ">
 </div>
