--- a/index.html
+++ b/index.html
@@ -49,9 +49,14 @@
 <!---->
 
 <div class="footer">
-    <img src="btc.png" style="width: 30px; height: 30px ">
-    <img src="eth.png" style="width: 30px; height: 30px ">
-    <img src="ltc.png" style="width: 30px; height: 30px ">
-    <img src="tether.png" style="width: 30px; height: 30px ">
-    <img src="pp.png" style="width: 30px; height: 30px ">
+        <img src="btc.png" style="width: 30px; height: 30px ">
+        <img src="eth.png" style="width: 30px; height: 30px ">
+        <img src="ltc.png" style="width: 30px; height: 30px ">
+        <img src="tether.png" style="width: 30px; height: 30px ">
+        <img src="xrp.png" style="width: 30px; height: 30px ">
+        <img src="bnb.png" style="width: 30px; height: 30px ">
+        <img src="solana.png" style="width: 30px; height: 30px ">
+        <img src="pp.png" style="width: 30px; height: 30px ">
+        <img src="bank-building.png" style="width: 30px; height: 30px ">
+        <img src="credit-card.png" style="width: 30px; height: 30px ">
 </div>
