--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <div class="topnav">
     <a>
-        [BuyCrypto.com]
+        [MoonRider.com]
     </a>
 
     <a href="#Forums">
@@ -19,10 +19,10 @@
 <!---->
 
 <h1 class="glow">
-    [BuyCrypto.com]
+    [MoonRider.com]
 
     <p style="font-size: 25px">
-        Exchange
+        Invest
 
         <u style="font-size: 25px">
             easily.
@@ -30,7 +30,7 @@
     </p>
 
     <p style="font-size: 25px">
-        Exchange
+        Invest
 
         <u style="font-size: 25px">
             safely.
@@ -42,7 +42,7 @@
 
 <div style="font-size: 15px ; text-align: center">
     <p style="color:white">
-        BuyCrypto offers a hassle-free and anonymous platform for buying and selling cryptocurrencies without requiring users to sign up. With near-instant transaction times, users can seamlessly trade their digital assets without the need for a lengthy registration process. The platform prioritizes convenience and efficiency, providing a quick and secure way for individuals to engage in cryptocurrency transactions without the typical barriers.
+        The trusted investment partner in the crypto realm. We specialize in low-risk, high-reward strategies, blending traditional finance wisdom with crypto innovation. Backed by expert teams, MoonRider ensures your investments navigate the volatile market safely, offering stability and growth potential. Join us for a journey to financial success in the world of digital assets.
     </p>
 </div>
 
