--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title> MoonRider </title>
+<title> Notebook </title>
 
 <body>
     <link rel="stylesheet" href="css.css">
@@ -6,57 +6,8 @@
 
 <!---->
 
-<div class="topnav">
-    <a>
-        [MoonRider.com]
-    </a>
-
-    <a href="#Info">
-        Information
-    </a>
-</div>
-
-<!---->
-
 <h1 class="glow">
-    [MoonRider.com]
-
-    <p style="font-size: 25px">
-        Invest
-
-        <u style="font-size: 25px">
-            easily.
-        </u>
-    </p>
-
-    <p style="font-size: 25px">
-        Invest
-
-        <u style="font-size: 25px">
-            safely.
-        </u>
-    </p>
+    [My 'notebook']
 </h1>
 
-<!---->
 
-<div style="font-size: 15px ; text-align: center">
-    <p style="color:white">
-        The trusted investment partner in the crypto realm. We specialize in low-risk, high-reward strategies, blending traditional finance wisdom with crypto innovation. Backed by expert teams, MoonRider ensures your investments navigate the volatile market safely, offering stability and growth potential. Join us for a journey to financial success in the world of digital assets.
-    </p>
-</div>
-
-<!---->
-
-<div class="footer">
-        <img src="btc.png" style="width: 30px; height: 30px ">
-        <img src="eth.png" style="width: 30px; height: 30px ">
-        <img src="ltc.png" style="width: 30px; height: 30px ">
-        <img src="tether.png" style="width: 30px; height: 30px ">
-        <img src="xrp.png" style="width: 30px; height: 30px ">
-        <img src="bnb.png" style="width: 30px; height: 30px ">
-        <img src="solana.png" style="width: 30px; height: 30px ">
-        <img src="pp.png" style="width: 30px; height: 30px ">
-        <img src="bank-building.png" style="width: 30px; height: 30px ">
-        <img src="credit-card.png" style="width: 30px; height: 30px ">
-</div>
