--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
-<title> Notebook </title>
+<html>
+  <head>
+      <title>Notebook</title>
+  </head>
 
-<centre>[My 'notebook']</centre>
-<a href="dll_injection.html"> Dll injection </a>
 
+  <body>
+    <p>
+      [A compilation of my journey into computing]
+    </p>
+    
+    <nav>
+      <a href="dll_injection.html">
+        Dll injection
+      </a>
+    </nav>
+  </body>
+</html>
 
