--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html href="style.css">
+<html>
+  <link rel="stylesheet" type="text/css" href="style.css>
   <head>
       <title>Notebook</title>
   </head>
