--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <link rel="stylesheet" type="text/css" href="style.css>
+  <link rel="stylesheet" href="style.css">
   <head>
       <title>Notebook</title>
   </head>
