--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <p>
-        [A compilation of my journey into computing]
+        [A compilation of my research]
       </p>
       
       <nav>
