--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<html>
+<html style="background-color: black">
   <head>
-      <link rel="stylesheet" href="style.css">
       <title>Notebook</title>
   </head>
 
