--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html style="background-color: black">
+<html style="background-color: black; color: white">
   <head>
       <title>Notebook</title>
   </head>
