--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html style="background-color: black; color: white">
+<html style="background-color: black; color: green; text-align:center">
   <head>
       <title>Notebook</title>
   </head>
@@ -6,7 +6,7 @@
 
   <body>
     <header>
-      <p>
+      <p style="font-size: 300%">
         [A compilation of my research]
       </p>
       
