--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html style="background-color: black; color: green; text-align:center">
+<html style="background-color: black; color: green; text-align: center; text-decoration: none">
   <head>
       <title>Notebook</title>
   </head>
