--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
   <body>
     <header>
+      <topnav>
+        <a href="dll_injection.html">Dll injection</a>
+      </nav>
+              
       <p style="font-size: 300%">
         [A compilation of my research]
       </p>
-      
-      <nav>
-        <a href="dll_injection.html">Dll injection</a>
-      </nav>
     </header>
 
     <section>
