--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
   <body>
     <header>
-      <topnav>
+      <div class="topnav">
         <a href="dll_injection.html">Dll injection</a>
-      </nav>
+      </div>
               
       <p style="font-size: 300%">
         [A compilation of my research]
