--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <body>
     <header>
-      <div class="topnav">
+      <div class="topnav" style="background-color: rgb(50, 50, 50)">
         <a href="dll_injection.html">Dll injection</a>
       </div>
               
