--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
   <body>
     <header>
-      <div class="topnav" style="background-color: rgb(50, 50, 50)">
+      <div class="topnav" style="background-color: gray;">
         <a href="dll_injection.html">Dll injection</a>
       </div>
               
-      <p style="font-size: 300%">
+      <p style="font-size: 300%;">
         [A compilation of my research]
       </p>
     </header>
