--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <body>
     <header>
-      <div class="topnav" style="background-color: gray;">
+      <div class="topnav">
         <a href="dll_injection.html">Dll injection</a>
       </div>
               
