--- a/dll_injection.html
+++ b/dll_injection.html
@@ -33,7 +33,8 @@
 </html>
 
 <p>
-    Here is the full code for the dll injector:
+    Here is the full code for the dll injector
     
+    <br>
     <img src="dll_injection1.png">
 </p>
