--- a/memory.html
+++ b/memory.html
@@ -1,4 +1,4 @@
-<html style="background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 40%, rgba(0, 64, 25, 1) 100%); background-image: url('lain_15_640.jpg') text-align: center; color: rgb(2550, 255, 255);">
+<html style="background-image: url('lain_15_640.jpg'); text-align: center; color: rgb(2550, 255, 255);">
     
   <head>
       <title>The virtual address space</title>
