--- a/memory.html
+++ b/memory.html
@@ -1,4 +1,4 @@
-<html style="background-image: url('lain_15_640.jpg'); text-align: center; color: rgb(2550, 255, 255);">
+<html style="background-image: url('lain_15_640.jpg'); background-color:rgb(10, 10, 10); text-align: center; color: rgb(2550, 255, 255);">
     
   <head>
       <title>The virtual address space</title>
